# cluster-api-addon-provider-fleet

./: Cargo.toml  README.md  Tiltfile  justfile  metadata.yaml
.github/workflows/: ci.yaml  documentation.yaml  update-metadata.yaml
config/crds/: fleet-addon-config.yaml
config/default/: manager_image_patch.yaml
config/manager/: manager.yaml
config/rbac/: role.yaml
docs/: book.toml
docs/src/: 00_intro.md  01_motivation.md
docs/src/02_getting_started/: 01_installation.md  02_configuration.md
docs/src/03_tutorials/: 01_prerequisites.md  03_installing_calico.md  04_installing_calico_via_gitrepo.md
docs/src/04_reference/: 01_import-strategy.md  02_templating-strategy.md  03_fleet-addon-config.md
docs/src/05_developers/: 01_release.md  02_development.md  03_e2e.md
fleet/applications/calico/: fleet.yaml
hack/tools/metadataupdate/: go.mod  main.go
src/: controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  multi_dispatcher.rs  predicates.rs  telemetry.rs
src/api/: bundle_namespace_mapping.rs  capi_cluster.rs  capi_clusterclass.rs  comparable.rs  fleet_addon_config.rs  fleet_cluster.rs  fleet_cluster_registration_token.rs  fleet_clustergroup.rs  mod.rs
src/controllers/: addon_config.rs  cluster.rs  cluster_class.rs  cluster_group.rs  controller.rs  mod.rs
src/controllers/helm/: install.rs
testdata/: capi-quickstart.yaml  cluster_docker_kcp.yaml  cluster_docker_rke2.yaml  config.yaml  gitrepo-calico.yaml  helm.yaml
