[package]
name = "cluster-api-addon-provider-fleet"
version = "0.1.0"
edition = "2024"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
agent-initiated = ["default"]
telemetry = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
actix-web = "4.12.1"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = { version = "3.0.0" , features = [
    "runtime",
    "client",
    "derive",
    "unstable-runtime",
    "unstable-client",
] }
schemars = { version = "1.2.0", features = ["jiff02"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
prometheus = "0.14.0"
jiff = "0.2.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "logs"]}
opentelemetry_sdk = { version = "0.31.0" }
thiserror = "2.0.18"
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive"] }
cluster-api-rs = "1.12.2"
fleet-api-rs = "0.14.2"
async-broadcast = "0.7.2"
pin-project = "1.1.10"
async-stream = "0.3.6"
educe = { version = "0.6.0", features = ["PartialEq"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
